--- a/cloudformation/cloudformer-k8s-cluster-k8s-the-hard-way.yaml
+++ b/cloudformation/cloudformer-k8s-cluster-k8s-the-hard-way.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: K8s cluster stack from existing infra - created kubernetes-the-hard-way
+Description: K8s cluster stack from existing infra - created !Ref ResourceTagName
 # Note defaults for most items are for region us-west-2
-
+# create a key-pair beforehand for access
 Mappings: 
   RegionAMIMap: 
     us-west-1:
@@ -44,6 +44,18 @@ Parameters:
     Type: String
     Default: ""
     Description: Enter a AWS availability zone for the K8s custom subnet
+  MyIpAddress:
+    Type: String
+    Default: "0.0.0.0/0"
+    Description: Enter your IP address (client) if you wish to limit access (kubectl) to your IP
+  ResourceTagName:
+    Type: String
+    Default: "kubernetes-the-hard-way-aws"
+    Description: Enter a tag name to use for all resources created for the cluster
+  AWSKeyPairName:
+    Type: String
+    Default: "kubernetes"
+    Description: Enter the name of the key pair to use for instance access via ssh
 
 Conditions:
   UseDefaultControllerAMI: !Equals [!Ref ControllerAMI, ""]
@@ -62,7 +74,7 @@ Resources:
       EnableDnsHostnames: 'true'
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
 
   SubnetKubernetes:
     Type: 'AWS::EC2::Subnet'
@@ -72,21 +84,21 @@ Resources:
       VpcId: !Ref VPCKubernetes
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
 
   IGWKubernetes:
     Type: 'AWS::EC2::InternetGateway'
     Properties:
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
 
   DHCPOptionsKubernetes:
     Type: 'AWS::EC2::DHCPOptions'
     Properties:
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
       DomainName: us-west-2.compute.internal
       DomainNameServers:
         - AmazonProvidedDNS
@@ -107,7 +119,7 @@ Resources:
       VpcId: !Ref VPCKubernetes
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
 
   ControllerOneInstance:
     Type: 'AWS::EC2::Instance'
@@ -116,7 +128,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultControllerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref ControllerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: K8S
@@ -140,7 +152,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultWorkerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref WorkerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: Name
@@ -164,7 +176,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultControllerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref ControllerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: K8S
@@ -188,7 +200,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultWorkerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref WorkerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: Name
@@ -212,7 +224,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultControllerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref ControllerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: K8S
@@ -236,7 +248,7 @@ Resources:
       InstanceInitiatedShutdownBehavior: stop
       ImageId: !If [UseDefaultWorkerAMI, !FindInMap [RegionAMIMap, !Ref "AWS::Region", Ubuntu1604], !Ref WorkerAMI]
       InstanceType: t2.micro
-      KeyName: kubernetes
+      KeyName: !Ref AWSKeyPairName
       Monitoring: 'false'
       Tags:
         - Key: Name
@@ -260,7 +272,7 @@ Resources:
       VpcId: !Ref VPCKubernetes
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
   acl1:
     Type: 'AWS::EC2::NetworkAclEntry'
     Properties:
@@ -330,7 +342,7 @@ Resources:
       IpProtocol: tcp
       FromPort: '6443'
       ToPort: '6443'
-      CidrIp: 24.9.31.138/32
+      CidrIp: !Ref MyIpAddress
   ingress2:
     Type: 'AWS::EC2::SecurityGroupIngress'
     Properties:
@@ -350,7 +362,7 @@ Resources:
       IpProtocol: tcp
       FromPort: '22'
       ToPort: '22'
-      CidrIp: 24.9.31.138/32
+      CidrIp: !Ref MyIpAddress
   ingress5:
     Type: 'AWS::EC2::SecurityGroupIngress'
     Properties:
@@ -358,7 +370,7 @@ Resources:
       IpProtocol: tcp
       FromPort: '30754'
       ToPort: '30754'
-      CidrIp: 24.9.31.138/32
+      CidrIp: !Ref MyIpAddress
   ingress6:
     Type: 'AWS::EC2::SecurityGroupIngress'
     Properties:
@@ -383,7 +395,7 @@ Resources:
       Type: network
       Tags:
         - Key: Name
-          Value: kubernetes-the-hard-way
+          Value: !Ref ResourceTagName
   ELBV2TargetGroupKubernetes:
     Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
     Properties:
@@ -406,4 +418,7 @@ Resources:
         - Type: forward
           TargetGroupArn: !Ref ELBV2TargetGroupKubernetes
 
-#Outputs:
+Outputs:
+  KubernetesPublicAddress:
+    Description: The address of the K8s Cluster (via the load balancer)
+    Value: !GetAtt ELBV2Kubernetes.DNSName
